:recycle: Update resume

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,19 +1,28 @@
-# Resume
+import { ExternalLinks } from "../components/externalLinks";
+import { ProgrammingLanguages } from "../components/programmingLanguages";
 
-import { useState } from "react";
+# Ryota Ikezawa
 
-export function Counter({ children }) {
-  const [count, setCount] = useState(0);
-  return (
-    <button onClick={() => setCount(count + 1)}>
-      {children}
-      {count}
-    </button>
-  );
-}
+<ExternalLinks />
 
-<Counter>**Clicks**: </Counter>
+---
 
 ## Skills
 
+### ProgramingLanguages
+
+<ProgrammingLanguages />
+
+### Frameworks
+
+- Ruby on Rails
+- React.js
+- Next.js
+
+### Tools
+
+- Git, Unix, Selenium
+
 ## Experience
+
+- work in progress
